updated responsibilities and achievements

--- a/index.html
+++ b/index.html
@@ -576,11 +576,10 @@
                 <div>
                     <h1>Mateusz Wąsalski</h1>
                     <p style="color: var(--success-color); margin-bottom: 10px;">
-                        Senior Data Engineer | Azure & Snowflake Specialist
+                        Data Engineer | Azure Data Factory, Azure Synapse, Snowflake, Databricks, Python, SQL
                     </p>
                     <p style="color: var(--text-secondary); margin-bottom: 15px;">
-                        Transforming raw data into actionable insights with focus on Azure Data Engineering 
-                        and building AI agents using Python.
+                        Transforming raw data into actionable insights with focus on Data Engineering
                     </p>
                     
                     <!-- Tech Stack Section -->
@@ -698,21 +697,19 @@
                     company: "SoftwareMind",
                     title: "Senior Cloud Data Engineer",
                     date: "03.2025 - Present",
-                    description: "Creating and maintaining ETL processes in Snowflake and Azure Data Factory",
-                    tech: ["Python", "Snowflake", "Azure Data Factory", "API Integration"],
+                    description: "Creating and maintaining ETL processes in Snowflake and Databricks",
+                    tech: ["Python", "Snowflake", "Azure Databricks", "Azure Data Factory", "API Integration"],
                     details: {
                         responsibilities: [
-                            "Designing and implementing ETL pipelines in Snowflake and Azure Data Factory",
+                            "Designing and implementing ETL pipelines in Snowflake",
                             "Writing Python API connectors for platforms like Jira, Azure DevOps, Azure Cost Management",
-                            "Integrating services: Checkmarx, Sonarcloud, Mend.io, Pagerduty, Mabl",
                             "Implementing CI/CD by connecting Snowflake notebooks with Azure DevOps repo",
-                            "Optimizing data warehouse performance and query execution"
+                            "Building from scratch Azure Databricks environment for data processing (rewriting Snowflake solution)",
                         ],
                         achievements: [
-                            "Reduced data processing time by 60% through pipeline optimization",
-                            "Implemented automated data quality checks across all pipelines",
                             "Created reusable API connector framework for faster integrations",
-                            "Established best practices for version control in Snowflake environment"
+                            "Rewrote Airbyte connectors in Python iomproving data governance",
+                            "Scheduled and automated ETL jobs using Snowflake Notebooks"
                         ]
                     }
                 },
@@ -720,21 +717,19 @@
                     company: "AngryNerds",
                     title: "Data Engineer",
                     date: "10.2024 - 03.2025",
-                    description: "Building ETL processes in Azure Synapse Analytics for ML model development",
+                    description: "Building repeatable Azure Synapse Analytics for ML model development",
                     tech: ["Azure Synapse", "Python", "Power BI", ".NET"],
                     details: {
                         responsibilities: [
                             "Creating and maintaining ETL processes in Azure Synapse Analytics (Live & Git mode)",
                             "Preparing data for MS365 licenses recommender ML model",
-                            "Collaborating with .NET developers for repeatable Azure Synapse environments",
+                            "Collaborating with .NET developers to create repeatable Azure Synapse environments",
                             "Recreating and improving Data Models in Power BI",
                             "Implementing data validation and quality assurance processes"
                         ],
                         achievements: [
-                            "Built ML-ready data pipeline processing 10M+ records daily",
-                            "Improved Power BI report performance by 40% through model optimization",
-                            "Established automated deployment process for Synapse workspaces",
-                            "Created documentation and knowledge transfer materials"
+                            "Co-created installable via Microsoft Store solution to fetch licenses costs thru all MS365 tenants",
+                            "Improved data model performance reducing refresh time by around 50%-60%"
                         ]
                     }
                 },
@@ -743,7 +738,7 @@
                     title: "Data Engineer",
                     date: "07.2023 - 10.2024",
                     description: "Developing Azure Data Factory pipelines and automation processes",
-                    tech: ["Azure Data Factory", "Python", "Logic Apps", "Power BI"],
+                    tech: ["Azure Data Factory", "Logic Apps", "Power BI", "Azure DevOps"],
                     details: {
                         responsibilities: [
                             "Creating and maintaining pipelines in Azure Data Factory",
@@ -753,10 +748,9 @@
                             "Creating and updating SQL tables in SSMS"
                         ],
                         achievements: [
-                            "Automated 15+ manual processes saving 20 hours weekly",
+                            "Automated 5 manual end to end processes which gave business up to date data everyday",
                             "Implemented email attachment extraction workflow using Logic Apps",
-                            "Developed Python ETL framework used across multiple projects",
-                            "Created universal reporting tables improving report consistency"
+                            "Developed Python ETL framework used across multiple projects"
                         ]
                     }
                 },
@@ -764,8 +758,8 @@
                     company: "Sanhua-Aweco",
                     title: "BI Developer",
                     date: "01.2023 - 06.2023",
-                    description: "Building Power BI solutions and conducting data analysis",
-                    tech: ["Power BI", "Python", "SQL", "Data Analytics"],
+                    description: "Building fundamentals for Business Intelligence team",
+                    tech: ["Power BI", "SQL"],
                     details: {
                         responsibilities: [
                             "Participating in requirements meetings with business stakeholders",
@@ -775,10 +769,10 @@
                             "Developing complex DAX measures and calculations"
                         ],
                         achievements: [
-                            "Delivered 10+ interactive Power BI dashboards",
-                            "Reduced report generation time from days to minutes",
-                            "Trained 50+ business users on self-service analytics",
-                            "Identified cost-saving opportunities through data analysis"
+                            "Automated i.e. processes in Controlling dept. to reduce manual work by 3 hourse daily per person",
+                            "Refactored legacy Visual Basic reports to Power BI improving maintainability",
+                            "Created fundamentals for internal BI team",
+                            "Created templates for Power BI reports for Polish branch"
                         ]
                     }
                 },
@@ -786,8 +780,8 @@
                     company: "ZF Group",
                     title: "Data Analyst / Power BI Developer",
                     date: "02.2022 - 12.2022",
-                    description: "Creating data visualizations and actionable insights",
-                    tech: ["Power BI", "Databricks", "Azure", "PySpark"],
+                    description: "Creating data visualizations and actionable insights for C-level management",
+                    tech: ["Power BI", "Databricks", "SQL"],
                     details: {
                         responsibilities: [
                             "Creating data visualizations in Power BI based on requirements",
@@ -799,7 +793,6 @@
                         achievements: [
                             "Built executive dashboard used by C-level management",
                             "Implemented real-time data refresh for critical KPIs",
-                            "Optimized Databricks notebooks reducing processing costs by 30%",
                             "Created data storytelling framework adopted company-wide"
                         ]
                     }
@@ -809,7 +802,7 @@
                     title: "Investment & Analysis Specialist",
                     date: "07.2020 - 01.2022",
                     description: "Investment analysis and reporting",
-                    tech: ["Excel", "Data Analysis", "Reporting"],
+                    tech: ["Excel", "SQL"],
                     details: {
                         responsibilities: [
                             "Conducting investment analysis and feasibility studies",
