--- a/index.html
+++ b/index.html
@@ -821,11 +821,12 @@
                 }
             ],
             certificates: [
-                { name: "AI_DEVS 2 Reloaded", date: "2024-04", icon: "🤖" },
+                { name: "AI_DEVS 3 Agents", date: "2024-11", icon: "🤖" },
+                { name: "AI_DEVS 2 Reloaded", date: "2024-04", icon: "🖥" },
                 { name: "Machine Learning Mastery", date: "2024-03", icon: "🧠" },
-                { name: "AI for Managers", date: "2023-12", icon: "🎯" },
+                { name: "AI for Managers", date: "2023-12", icon: "🧑‍💻" },
                 { name: "Business Intelligence & Data Analyst", date: "2022-07", icon: "📊" },
-                { name: "AgilePM® Foundation", date: "2018-09", icon: "🏃" }
+                { name: "AgilePM® Foundation", date: "2018-09", icon: "🏭" }
             ],
             education: [
                 {
