--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             --pixel-size: 4px;
         }
 
+        /* Light Mode */
+        [data-theme="light"] {
+            --bg-color: #ffffff;
+            --card-bg: #f6f8fa;
+            --border-color: #d0d7de;
+            --text-primary: #24292f;
+            --text-secondary: #57606a;
+            --accent-color: #0969da;
+            --success-color: #1a7f37;
+            --warning-color: #9a6700;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -560,15 +572,284 @@
             transform: translateY(4px);
             box-shadow: none;
         }
+
+        /* Sticky Navigation */
+        .sticky-nav {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--card-bg);
+            border: 2px solid var(--border-color);
+            padding: 10px;
+            z-index: 999;
+            box-shadow: 4px 4px 0 0 rgba(0,0,0,0.5);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .nav-btn {
+            background: var(--accent-color);
+            color: var(--bg-color);
+            border: none;
+            padding: 8px 12px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 8px;
+            cursor: pointer;
+            transition: all 0.2s;
+            white-space: nowrap;
+        }
+
+        .nav-btn:hover {
+            background: var(--success-color);
+            transform: translateX(-3px);
+        }
+
+        /* Theme Toggle */
+        .theme-toggle {
+            background: var(--card-bg);
+            border: 2px solid var(--border-color);
+            padding: 8px;
+            cursor: pointer;
+            font-size: 20px;
+            transition: all 0.2s;
+            box-shadow: 2px 2px 0 0 rgba(0,0,0,0.5);
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
+        }
+
+        /* Loading Screen */
+        .loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            transition: opacity 0.5s;
+        }
+
+        .loading-screen.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .loading-text {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 16px;
+            color: var(--accent-color);
+            margin-bottom: 20px;
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            0%, 50% { opacity: 1; }
+            51%, 100% { opacity: 0; }
+        }
+
+        .progress-bar {
+            width: 300px;
+            height: 30px;
+            border: 3px solid var(--accent-color);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .progress-fill {
+            height: 100%;
+            background: var(--accent-color);
+            width: 0%;
+            transition: width 0.3s;
+            position: relative;
+        }
+
+        .progress-fill::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: repeating-linear-gradient(
+                90deg,
+                transparent,
+                transparent 10px,
+                rgba(255,255,255,0.3) 10px,
+                rgba(255,255,255,0.3) 20px
+            );
+        }
+
+        /* Konami Code Easter Egg */
+        .easter-egg {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            background: var(--card-bg);
+            border: 5px solid var(--success-color);
+            padding: 40px;
+            z-index: 10000;
+            text-align: center;
+            box-shadow: 0 0 50px rgba(88, 166, 255, 0.5);
+            transition: transform 0.5s;
+        }
+
+        .easter-egg.active {
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        .easter-egg h2 {
+            color: var(--success-color);
+            margin-bottom: 20px;
+            animation: rainbow 2s infinite;
+        }
+
+        @keyframes rainbow {
+            0% { color: #ff0000; }
+            16% { color: #ff7f00; }
+            33% { color: #ffff00; }
+            50% { color: #00ff00; }
+            66% { color: #0000ff; }
+            83% { color: #8b00ff; }
+            100% { color: #ff0000; }
+        }
+
+        .easter-egg-close {
+            margin-top: 20px;
+            background: var(--accent-color);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 10px;
+            cursor: pointer;
+        }
+
+        /* Tech Filter Active State */
+        .tech-tag.active {
+            background: var(--success-color);
+            border-color: var(--success-color);
+            color: white;
+        }
+
+        .experience-item.hidden {
+            display: none;
+        }
+
+        .filter-reset {
+            background: var(--warning-color);
+            border: 2px solid var(--warning-color);
+            color: white;
+            padding: 10px 20px;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 10px;
+            cursor: pointer;
+            margin-bottom: 20px;
+            display: none;
+        }
+
+        .filter-reset.visible {
+            display: inline-block;
+        }
+
+        /* Print Styles */
+        @media print {
+            body {
+                background: white;
+                color: black;
+                font-size: 12pt;
+            }
+
+            .sticky-nav,
+            .github-chart,
+            .copy-toast,
+            .loading-screen,
+            .easter-egg {
+                display: none !important;
+            }
+
+            .pixel-card {
+                page-break-inside: avoid;
+                box-shadow: none;
+                border: 1px solid #ddd;
+            }
+
+            .experience-item {
+                page-break-inside: avoid;
+            }
+
+            h1 { font-size: 20pt; }
+            h2 { font-size: 14pt; }
+            h3 { font-size: 12pt; }
+
+            a {
+                color: black;
+                text-decoration: underline;
+            }
+
+            .contact-item::after {
+                content: " (" attr(href) ")";
+            }
+        }
+
+        @media (max-width: 768px) {
+            .sticky-nav {
+                flex-direction: row;
+                top: auto;
+                bottom: 10px;
+                right: 10px;
+                left: 10px;
+            }
+
+            .progress-bar {
+                width: 200px;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div class="loading-screen" id="loadingScreen">
+        <div class="loading-text">LOADING...</div>
+        <div class="progress-bar">
+            <div class="progress-fill" id="progressFill"></div>
+        </div>
+    </div>
+
     <!-- Copy notification toast -->
     <div id="copyToast" class="copy-toast">EMAIL COPIED!</div>
-    
+
+    <!-- Sticky Navigation -->
+    <nav class="sticky-nav">
+        <button class="theme-toggle" id="themeToggle" title="Toggle theme">🌙</button>
+        <button class="nav-btn" onclick="scrollToSection('header')">TOP</button>
+        <button class="nav-btn" onclick="scrollToSection('experience')">WORK</button>
+        <button class="nav-btn" onclick="scrollToSection('certificates')">CERTS</button>
+        <button class="nav-btn" onclick="scrollToSection('education')">EDU</button>
+        <button class="nav-btn" onclick="downloadPDF()" title="Download as PDF">📥 PDF</button>
+    </nav>
+
+    <!-- Easter Egg -->
+    <div class="easter-egg" id="easterEgg">
+        <h2>🎮 ACHIEVEMENT UNLOCKED! 🎮</h2>
+        <p style="font-family: 'VT323', monospace; font-size: 20px; color: var(--text-secondary);">
+            You found the secret Konami Code!<br>
+            ↑ ↑ ↓ ↓ ← → ← → B A<br><br>
+            True retro gaming fan detected! 🕹️
+        </p>
+        <button class="easter-egg-close" onclick="closeEasterEgg()">CLOSE</button>
+    </div>
+
     <div class="container">
         <!-- Header Section -->
-        <section class="pixel-card">
+        <section class="pixel-card" id="header">
             <div class="header">
                 <div class="avatar-container">
                     <div class="avatar">MW</div>
@@ -623,15 +904,16 @@
         </section>
 
         <!-- Experience Section -->
-        <section class="experience-section">
+        <section class="experience-section" id="experience">
             <h2 style="margin-bottom: 20px;">💼 EXPERIENCE</h2>
+            <button class="filter-reset" id="filterReset" onclick="resetFilter()">RESET FILTER</button>
             <div id="experienceList">
                 <!-- Will be populated by JavaScript -->
             </div>
         </section>
 
         <!-- Certificates Section -->
-        <section class="pixel-card">
+        <section class="pixel-card" id="certificates">
             <h2>🏆 CERTIFICATES</h2>
             <div class="certificates-grid" id="certificatesGrid">
                 <!-- Will be populated by JavaScript -->
@@ -639,7 +921,7 @@
         </section>
 
         <!-- Education Section -->
-        <section class="pixel-card">
+        <section class="pixel-card" id="education">
             <h2>🎓 EDUCATION</h2>
             <div id="educationSection">
                 <!-- Will be populated by JavaScript -->
@@ -651,6 +933,7 @@
         // CONFIGURATION - Update this with your GitHub username
         const GITHUB_USERNAME = 'mwasalski';
         const EMAIL_ADDRESS = 'm.wasalski@gmail.com';
+        const PDF_PATH = 'Mateusz_Wasalski_CV.pdf'; // Update this with your PDF filename
         
         // Copy email to clipboard function
         function copyEmail() {
@@ -955,11 +1238,144 @@
             fetchGitHubContributions(GITHUB_USERNAME);
         });
 
+        // Smooth scroll to section
+        function scrollToSection(sectionId) {
+            const section = document.getElementById(sectionId);
+            if (section) {
+                section.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            }
+        }
+
+        // Download as PDF
+        function downloadPDF() {
+            // Create a temporary link and trigger download
+            const link = document.createElement('a');
+            link.href = PDF_PATH;
+            link.download = PDF_PATH.split('/').pop(); // Get filename from path
+            link.target = '_blank'; // Open in new tab as fallback
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
+        // Theme Toggle
+        const themeToggle = document.getElementById('themeToggle');
+        const savedTheme = localStorage.getItem('theme') || 'dark';
+
+        function setTheme(theme) {
+            if (theme === 'light') {
+                document.documentElement.setAttribute('data-theme', 'light');
+                themeToggle.textContent = '☀️';
+            } else {
+                document.documentElement.removeAttribute('data-theme');
+                themeToggle.textContent = '🌙';
+            }
+            localStorage.setItem('theme', theme);
+        }
+
+        setTheme(savedTheme);
+
+        themeToggle.addEventListener('click', () => {
+            const currentTheme = localStorage.getItem('theme') || 'dark';
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            setTheme(newTheme);
+        });
+
+        // Loading Screen
+        function showLoadingScreen() {
+            const loadingScreen = document.getElementById('loadingScreen');
+            const progressFill = document.getElementById('progressFill');
+
+            let progress = 0;
+            const interval = setInterval(() => {
+                progress += Math.random() * 30;
+                if (progress >= 100) {
+                    progress = 100;
+                    clearInterval(interval);
+                    setTimeout(() => {
+                        loadingScreen.classList.add('hidden');
+                    }, 500);
+                }
+                progressFill.style.width = progress + '%';
+            }, 200);
+        }
+
+        // Konami Code Easter Egg
+        const konamiCode = ['ArrowUp', 'ArrowUp', 'ArrowDown', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'b', 'a'];
+        let konamiIndex = 0;
+
+        document.addEventListener('keydown', (e) => {
+            const key = e.key.toLowerCase();
+
+            if (key === konamiCode[konamiIndex] || e.key === konamiCode[konamiIndex]) {
+                konamiIndex++;
+                if (konamiIndex === konamiCode.length) {
+                    document.getElementById('easterEgg').classList.add('active');
+                    konamiIndex = 0;
+                }
+            } else {
+                konamiIndex = 0;
+            }
+        });
+
+        function closeEasterEgg() {
+            document.getElementById('easterEgg').classList.remove('active');
+        }
+
+        // Tech Stack Filter
+        let activeFilter = null;
+
+        function filterByTech(tech) {
+            const experiences = document.querySelectorAll('.experience-item');
+            const filterReset = document.getElementById('filterReset');
+
+            if (activeFilter === tech) {
+                // Deactivate filter
+                activeFilter = null;
+                experiences.forEach(exp => exp.classList.remove('hidden'));
+                document.querySelectorAll('.tech-tag').forEach(tag => tag.classList.remove('active'));
+                filterReset.classList.remove('visible');
+            } else {
+                // Activate filter
+                activeFilter = tech;
+                filterReset.classList.add('visible');
+
+                experiences.forEach(exp => {
+                    const techTags = Array.from(exp.querySelectorAll('.tech-tag')).map(tag => tag.textContent);
+                    if (techTags.includes(tech)) {
+                        exp.classList.remove('hidden');
+                    } else {
+                        exp.classList.add('hidden');
+                    }
+                });
+
+                // Update active state on tech tags
+                document.querySelectorAll('.tech-tag').forEach(tag => {
+                    if (tag.textContent === tech) {
+                        tag.classList.add('active');
+                    } else {
+                        tag.classList.remove('active');
+                    }
+                });
+            }
+        }
+
+        function resetFilter() {
+            activeFilter = null;
+            document.querySelectorAll('.experience-item').forEach(exp => exp.classList.remove('hidden'));
+            document.querySelectorAll('.tech-tag').forEach(tag => tag.classList.remove('active'));
+            document.getElementById('filterReset').classList.remove('visible');
+        }
+
         document.addEventListener('click', (e) => {
             if (e.target.classList.contains('tech-tag')) {
-                // Could filter experiences by tech stack in the future
-                console.log('Clicked on:', e.target.textContent);
+                filterByTech(e.target.textContent);
             }
+        });
+
+        // Initialize everything on page load
+        window.addEventListener('load', () => {
+            showLoadingScreen();
         });
     </script>
 </body>
