changed seniority in softwaremind

--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
             experiences: [
                 {
                     company: "SoftwareMind",
-                    title: "Senior Cloud Data Engineer",
+                    title: "Cloud Data Engineer",
                     date: "03.2025 - Present",
                     description: "Creating and maintaining ETL processes in Snowflake and Databricks",
                     tech: ["Python", "Snowflake", "Azure Databricks", "Azure Data Factory", "API Integration"],
@@ -986,7 +986,7 @@
                         responsibilities: [
                             "Designing and implementing ETL pipelines in Snowflake",
                             "Writing Python API connectors for platforms like Jira, Azure DevOps, Azure Cost Management",
-                            "Implementing CI/CD by connecting Snowflake notebooks with Azure DevOps repo",
+                            "Implementing version control with Azure DevOps repo",
                             "Building from scratch Azure Databricks environment for data processing (rewriting Snowflake solution)",
                         ],
                         achievements: [
