--- a/index.html
+++ b/index.html
@@ -441,13 +441,56 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            body {
+                font-size: 16px;
+                padding: 10px;
+            }
+
+            .container {
+                padding: 0;
+            }
+
             .header {
                 grid-template-columns: 1fr;
                 text-align: center;
             }
-            
+
             .avatar-container {
                 margin: 0 auto;
+                width: 100px;
+                height: 100px;
+            }
+
+            .avatar {
+                font-size: 36px;
+            }
+
+            h1 {
+                font-size: 18px;
+                line-height: 1.4;
+            }
+
+            h2 {
+                font-size: 12px;
+            }
+
+            h3 {
+                font-size: 10px;
+            }
+
+            .pixel-card {
+                padding: 15px;
+                margin-bottom: 15px;
+            }
+
+            .contact-info {
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
+            }
+
+            .contact-item {
+                font-size: 16px;
             }
 
             .experience-details {
@@ -461,7 +504,172 @@
             }
 
             .date-range {
-                align-self: start;
+                align-self: center;
+                font-size: 12px;
+            }
+
+            .company-name {
+                font-size: 11px;
+            }
+
+            .job-title {
+                font-size: 16px;
+            }
+
+            .experience-description {
+                font-size: 14px;
+            }
+
+            .details-section h4 {
+                font-size: 9px;
+            }
+
+            .details-list li {
+                font-size: 14px;
+                line-height: 1.5;
+            }
+
+            .tech-stack {
+                justify-content: center;
+            }
+
+            .tech-tag {
+                font-size: 12px;
+                padding: 6px 10px;
+            }
+
+            .certificates-grid {
+                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                gap: 15px;
+            }
+
+            .cert-icon {
+                font-size: 36px;
+            }
+
+            .cert-name {
+                font-size: 14px;
+            }
+
+            .cert-date {
+                font-size: 12px;
+            }
+
+            .github-chart {
+                padding: 10px;
+                overflow-x: auto;
+            }
+
+            .github-chart h3 {
+                font-size: 10px;
+            }
+
+            /* Make GitHub calendar scrollable on mobile */
+            #github-graph {
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            .copy-toast {
+                top: 10px;
+                right: 10px;
+                left: 10px;
+                font-size: 8px;
+                padding: 12px 15px;
+            }
+
+            .easter-egg {
+                padding: 20px;
+                width: 90%;
+                max-width: 300px;
+            }
+
+            .easter-egg h2 {
+                font-size: 10px;
+            }
+
+            .easter-egg p {
+                font-size: 14px !important;
+            }
+
+            .pixel-btn,
+            .filter-reset {
+                font-size: 10px;
+                padding: 8px 15px;
+            }
+
+            .nav-btn {
+                font-size: 7px;
+                padding: 6px 10px;
+            }
+        }
+
+        /* Extra small devices (phones, less than 480px) */
+        @media (max-width: 480px) {
+            body {
+                font-size: 14px;
+                padding: 5px;
+            }
+
+            h1 {
+                font-size: 16px;
+            }
+
+            h2 {
+                font-size: 11px;
+            }
+
+            .pixel-card {
+                padding: 12px;
+            }
+
+            .avatar-container {
+                width: 80px;
+                height: 80px;
+            }
+
+            .avatar {
+                font-size: 30px;
+            }
+
+            .company-name {
+                font-size: 10px;
+            }
+
+            .job-title {
+                font-size: 14px;
+            }
+
+            .details-section h4 {
+                font-size: 8px;
+            }
+
+            .details-list li {
+                font-size: 13px;
+            }
+
+            .tech-tag {
+                font-size: 11px;
+                padding: 5px 8px;
+            }
+
+            .certificates-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .sticky-nav {
+                padding: 8px;
+                gap: 8px;
+            }
+
+            .nav-btn {
+                font-size: 6px;
+                padding: 5px 8px;
+            }
+
+            .theme-toggle {
+                font-size: 16px;
+                padding: 6px;
             }
         }
 
@@ -799,17 +1007,35 @@
             }
         }
 
-        @media (max-width: 768px) {
+        /* Tablet and smaller devices - better sticky nav positioning */
+        @media (max-width: 1024px) {
             .sticky-nav {
                 flex-direction: row;
                 top: auto;
                 bottom: 10px;
                 right: 10px;
                 left: 10px;
+                flex-wrap: wrap;
+                justify-content: center;
             }
+        }
 
+        @media (max-width: 768px) {
             .progress-bar {
                 width: 200px;
+            }
+
+            /* Improve hover states for touch devices */
+            .pixel-card:hover {
+                transform: none;
+            }
+
+            .experience-item:hover {
+                transform: none;
+            }
+
+            .contact-item:hover {
+                transform: none;
             }
         }
     </style>
